# foxycon

./: .gitignore  LICENSE.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  settings.py  setup.py
docs/: index.md  link_analysis.md
foxycon/: __init__.py
foxycon/analysis_services/: analysis_modules.py  сontent_analyzer.py
foxycon/data_structures/: analysis_type.py  balancer_type.py  content_type.py  country_type.py  error_type.py  search_type.py  search_types.py  statistician_type.py  type_content.py  utils_type.py
foxycon/search_services/: search.py  search_node.py
foxycon/search_services/AutoInstagram/: DataInstagramHashtag.py
foxycon/search_services/algorithms/: __init__.py  algorithm_interface.py  youtube_algorithm.py
foxycon/search_services/modules/: algorithm_search.py  link_collectors.py  search_soc_net.py  search_youtube.py
foxycon/search_services/old/: exception.py
foxycon/search_services/old/AutoAdsLibrary/: DataFBAdsLib.py
foxycon/search_services/old/AutoGoogleAlerts/: DataNews.py
foxycon/search_services/old/AutoGoogleSearch/: DataGoogleSearch.py
foxycon/search_services/old/AutoInstagram/: DataInstagramHashtag.py
foxycon/statistics_services/: content_social_network.py  content_statistician.py  statistics_exceptions.py  statistics_modules.py
foxycon/statistics_services/modules/: interface_statistics_module.py  statistics_instagram.py  statistics_social_network.py  statistics_telegram.py  statistics_youtube.py  statistics_youtube_old.py
foxycon/statistics_services/modules/utils/: subtitles_analizer.py
foxycon/statistics_services/modules_youtube/: statistics_instagram.py  statistics_social_network.py
foxycon/utils/: __init__.py  balancers.py  call_balancer.py  clients_handler.py  storage_manager.py  telegram_account_balancer.py
instagram_reels/api/public/client/: MediaInfoClient.py  ReelsClient.py
instagram_reels/api/public/parser/: MediaInfoParser.py
instagram_reels/common/: IReelsClient.py
instagram_reels/common/model/: ReelModel.py
tests/: test_analysis.py  test_statistics.py
tests/statistics_services/: test_content_social_network.py
youtube_subtitles/: analizer.py
