[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "foxycon"
version = "0.3.1"
description = "Default template for PDM package"
authors = [
    {name = "shapranov dmitrii", email = "shapranov.work@gmail.com"},
]
dependencies = ["telethon>=1.38.1", "pytubefix>=8.12.0", "instagram-tail @ git+https://git@github.com/ShapDi/instagram_tail.git", "regex>=2024.11.6", "beautifulsoup4>=4.13.3", "pydantic>=2.10.6"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.8.1",
]
[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "mypy>=1.15.0",
]
