[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "foxycon"
version = "0.4.0dev"
description = "python is a library that performs the tasks of parsing data from social networks with an emphasis on statistics"
authors = [
    {name = "shapranov dmitrii", email = "shapranov.work@gmail.com"},
]
dependencies = ["telethon>=1.38.1", "pytubefix>=8.12.0", "regex>=2024.11.6", "beautifulsoup4>=4.13.3", "pydantic>=2.10.6", "instagram-tail @ git+https://github.com/ShapDi/instagram_tail.git", "socnet-entitys @ git+https://github.com/ShapDi/foxycon-socnet-entity.git"]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.8.1",
]
[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "mypy>=1.15.0",
    "pytest-asyncio>=1.0.0",
]
docs = [
    "mkdocs-material>=9.6.12",
]

